feat: add wording on already checked in

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=3306
-DB_USERNAME=user
-DB_PASSWORD=90807060
+DB_USERNAME=root
+DB_PASSWORD=admin
 DB_NAME=qr_wedding
